--- a/episodes.html
+++ b/episodes.html
@@ -1,146 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Yu-Gi-Oh! ARC-V Fan Site - Episodes</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body id="episodes-page">
+  <head>
+    <meta charset="UTF-8">
+    <title>Yu-Gi-Oh! ARC-V - Episodes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body class="episodes">
+    <div class="nav">
+      <div class="nav-inner">
+        <div class="nav-title">ARC-V Episodes</div>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="episodes.html">Episodes</a>
+          <a href="gallery.html">Gallery</a>
+        </div>
+      </div>
+    </div>
 
-  <header class="site-header">
-    <h1 class="site-title">ARC-V EPISODE GUIDE</h1>
-    <nav class="site-nav">
-      <ul>
-        <li><a href="index.html">Overview</a></li>
-        <li><a href="episodes.html">Episode Guide</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="content episodes-layout">
-    <section class="episodes-intro">
-      <h2>Major Arcs in Yu-Gi-Oh! ARC-V</h2>
-      <p>
-        ARC-V is split into several big arcs that jump across dimensions. This page gives
-        you a simple look at some key episodes and why they matter. You can swap in your
-        own favorite episodes and more detailed reviews later.
-      </p>
-      <ol class="episodes-list-summary">
-        <li>
-          <strong>Standard Dimension / You Show Arc</strong> – Yuya develops his style
-          as an Entertainment Duelist and discovers Pendulum Summoning.
-        </li>
-        <li>
-          <strong>Synchro Dimension (New Domino-style City)</strong> – The cast gets
-          dragged into a conflict built around dueling, rankings, and resistance.
-        </li>
-        <li>
-          <strong>Xyz and Fusion Dimensions</strong> – The truth behind the war, the
-          Four Yuyas, and what the Professor is actually doing.
-        </li>
-      </ol>
-    </section>
-
-    <section class="episodes-grid">
-      <article class="episode-card">
-        <!-- Replace with a screenshot from early episodes -->
-        <img src="https://via.placeholder.com/400x230" alt="Yuya’s first big duel inspired screenshot">
-        <h3>Episode 1: Swing Into Action</h3>
+    <div class="episodes-main">
+      <div class="ep-intro">
+        <h2>Episode Overview</h2>
         <p>
-          Yuya is thrown into a high-pressure Duel in front of a live audience. His attempt
-          to smile through the pressure sets the tone for his whole “entertainment duel”
-          philosophy.
+          This page highlights a few important parts of Yu-Gi-Oh! ARC-V. You can change
+          the episode names and comments later to match your own favorites.
         </p>
-        <ul>
-          <li>Focus character: Yuya Sakaki</li>
-          <li>Key theme: Performing under pressure</li>
-          <li>Energy: Classic shōnen first duel hype</li>
-        </ul>
-      </article>
+        <ol>
+          <li>Early: Yuya develops his Entertainment Duel style.</li>
+          <li>Middle: The group travels to other dimensions.</li>
+          <li>Late: The truth behind the war and the “four Yuyas”.</li>
+        </ol>
+      </div>
 
-      <article class="episode-card">
-        <!-- Replace with a You Show School screenshot -->
-        <img src="https://via.placeholder.com/400x230" alt="You Show Duel School inspired screenshot">
-        <h3>Episode 2: You Show, You Duel</h3>
-        <p>
-          We see more of You Show Duel School, its weird teaching style, and why Yuya’s
-          friends believe in him even when the school looks like a joke to everyone else.
-        </p>
-        <ul>
-          <li>Focus characters: Yuya, Yuzu, Gongenzaka</li>
-          <li>Key theme: Believing in “small” dreams</li>
-          <li>Rating: ★★★★☆ for character vibes</li>
-        </ul>
-      </article>
+      <div class="ep-grid">
+        <div class="ep-card">
+          <img src="https://via.placeholder.com/400x230" alt="Early duel scene">
+          <h3>Episode 1: First Big Duel</h3>
+          <p>
+            Yuya is pushed into a serious duel in front of a crowd. It sets up his
+            dream of making people smile through dueling.
+          </p>
+          <ul>
+            <li>Focus: Yuya Sakaki</li>
+            <li>Theme: Performing under pressure</li>
+          </ul>
+        </div>
 
-      <article class="episode-card">
-        <!-- Replace with a Pendulum Summon moment screenshot -->
-        <img src="https://via.placeholder.com/400x230" alt="Pendulum Summon inspired screenshot">
-        <h3>Episode 3: The Pendulum Miracle</h3>
-        <p>
-          Pendulum Summoning takes the stage and completely changes how duels look.
-          This is the “new mechanic reveal” that the whole series builds around.
-        </p>
-        <ul>
-          <li>Focus character: Yuya Sakaki</li>
-          <li>Key theme: Change and potential</li>
-          <li>Rating: ★★★★★ for spectacle</li>
-        </ul>
-      </article>
+        <div class="ep-card">
+          <img src="https://via.placeholder.com/400x230" alt="You Show Duel School scene">
+          <h3>Early School Episode</h3>
+          <p>
+            We see You Show Duel School and why it looks “weak” from the outside
+            but actually supports creative duel styles.
+          </p>
+          <ul>
+            <li>Focus: Yuya and Yuzu</li>
+            <li>Theme: Believing in a small school</li>
+          </ul>
+        </div>
 
-      <article class="episode-card">
-        <!-- Replace with a Synchro Dimension / city shot -->
-        <img src="https://via.placeholder.com/400x230" alt="Synchro Dimension city inspired screenshot">
-        <h3>Key Arc Episode: Synchro Showdown</h3>
-        <p>
-          In the Synchro Dimension, duels are tied to status and control. Yuya clashes
-          with a system where losing a duel means more than just losing LP.
-        </p>
-        <ul>
-          <li>Focus characters: Yuya &amp; local rivals</li>
-          <li>Key theme: Freedom vs. control</li>
-          <li>Rating: ★★★★☆ for worldbuilding</li>
-        </ul>
-      </article>
+        <div class="ep-card">
+          <img src="https://via.placeholder.com/400x230" alt="Pendulum Summon moment">
+          <h3>The Pendulum Reveal</h3>
+          <p>
+            Pendulum Summoning appears and changes how duels work. It becomes the
+            main mechanic that defines ARC-V.
+          </p>
+          <ul>
+            <li>Focus: New summon mechanic</li>
+            <li>Theme: Change and potential</li>
+          </ul>
+        </div>
 
-      <article class="episode-card">
-        <!-- Replace with an emotional dragon scene -->
-        <img src="https://via.placeholder.com/400x230" alt="Emotional dragon duel inspired screenshot">
-        <h3>Key Arc Episode: Dragons and Doubt</h3>
-        <p>
-          Yuya’s dragons mirror his emotional state, and the show leans into how scary
-          it feels when your power starts to slip out of your control.
-        </p>
-        <ul>
-          <li>Focus character: Yuya Sakaki</li>
-          <li>Key theme: Fear of your own power</li>
-          <li>Rating: ★★★★★ for emotional damage</li>
-        </ul>
-      </article>
+        <div class="ep-card">
+          <img src="https://via.placeholder.com/400x230" alt="Synchro style city scene">
+          <h3>Synchro Dimension Arc</h3>
+          <p>
+            The cast ends up in a city where duels affect rankings and freedom.
+            The system is strict and punishes “losers”.
+          </p>
+          <ul>
+            <li>Focus: New allies and rivals</li>
+            <li>Theme: Freedom vs. control</li>
+          </ul>
+        </div>
 
-      <article class="episode-card">
-        <!-- Replace with a late-series group shot -->
-        <img src="https://via.placeholder.com/400x230" alt="ARC-V cast climax inspired screenshot">
-        <h3>Late-Series Turning Point</h3>
-        <p>
-          The different dimensions, versions of Yuya, and the larger plan finally come
-          together. Friendships, ideals, and dragons all collide at once.
-        </p>
-        <ul>
-          <li>Focus characters: Core main cast</li>
-          <li>Key theme: Identity and choice</li>
-          <li>Rating: ★★★★☆ for chaos and payoff</li>
-        </ul>
-      </article>
-    </section>
-  </main>
+        <div class="ep-card">
+          <img src="https://via.placeholder.com/400x230" alt="Emotional dragon duel">
+          <h3>Emotional Dragon Duel</h3>
+          <p>
+            Yuya’s dragons reflect his emotions. When he loses control, the duel
+            feels dangerous, not just flashy.
+          </p>
+          <ul>
+            <li>Focus: Yuya and his dragons</li>
+            <li>Theme: Fear of your own power</li>
+          </ul>
+        </div>
 
-  <footer class="site-footer">
-    <p>&copy; 2025 Yu-Gi-Oh! ARC-V Episode Guide. Student review page.</p>
-  </footer>
+        <div class="ep-card">
+          <img src="https://via.placeholder.com/400x230" alt="Late series cast shot">
+          <h3>Late-Series Turning Point</h3>
+          <p>
+            Different dimensions, different versions of Yuya, and old plans all
+            collide in one big set of duels.
+          </p>
+          <ul>
+            <li>Focus: Core main cast</li>
+            <li>Theme: Identity and choice</li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-</body>
+    <div class="footer">
+      <p>© 2025 Yu-Gi-Oh! ARC-V Episodes. Student project.</p>
+    </div>
+  </body>
 </html>
