--- a/gallery.html
+++ b/gallery.html
@@ -1,121 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Yu-Gi-Oh! ARC-V Fan Site - Gallery</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body id="gallery-page">
+  <head>
+    <meta charset="UTF-8">
+    <title>Yu-Gi-Oh! ARC-V - Gallery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body class="gallery">
+    <div class="nav">
+      <div class="nav-inner">
+        <div class="nav-title">ARC-V Gallery</div>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="episodes.html">Episodes</a>
+          <a href="gallery.html">Gallery</a>
+        </div>
+      </div>
+    </div>
 
-  <header class="site-header">
-    <h1 class="site-title">ARC-V VISUAL GALLERY</h1>
-    <nav class="site-nav">
-      <ul>
-        <li><a href="index.html">Main Site</a></li>
-        <li><a href="episodes.html">Episode List</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-      </ul>
-    </nav>
-  </header>
+    <div class="gallery-main">
+      <div class="gal-intro">
+        <h2>Characters and Scenes</h2>
+        <p>
+          Yu-Gi-Oh! ARC-V has bold colors, loud duel fields, and character designs
+          that lean into “maximum dramatic hair”. This page shows a few important
+          faces and places.
+        </p>
+        <p>
+          You can replace these placeholder images with real screenshots later,
+          like Yuya, Yuzu, Reiji, the school, and your favorite duel moments.
+        </p>
+      </div>
 
-  <main class="content gallery-layout">
-    <section class="gallery-intro">
-      <h2>Characters &amp; Scenes from Yu-Gi-Oh! ARC-V</h2>
-      <p>
-        ARC-V has a really loud visual style: bright colors, wild duel fields,
-        and character designs that look like someone yelled “more accessories”
-        at the design team. This page highlights a few key faces and places.
-      </p>
-      <p>
-        You can swap the placeholder images with real screenshots of Yuya,
-        his friends, the dragons, and any duel that lives rent-free in your brain.
-      </p>
-    </section>
+      <div class="gal-grid">
+        <div class="gal-item">
+          <img src="https://via.placeholder.com/350x250" alt="Yuya Sakaki portrait style">
+          <h3>Yuya Sakaki</h3>
+          <p>
+            The main character. An Entertainment Duelist who wants to make people
+            smile, even when things get serious.
+          </p>
+        </div>
 
-    <section class="gallery-grid">
-      <figure class="gallery-item">
-        <!-- Replace with a Yuya screenshot -->
-        <img src="https://via.placeholder.com/350x250" alt="Yuya Sakaki inspired portrait">
-        <figcaption>
-          <strong>Yuya Sakaki</strong><br>
-          The main protagonist and Entertainment Duelist. His goal is to make people
-          smile with duels, even while the plot keeps throwing trauma directly at him.
-        </figcaption>
-      </figure>
+        <div class="gal-item">
+          <img src="https://via.placeholder.com/350x250" alt="Yuzu/Zuzu portrait style">
+          <h3>Yuzu / Zuzu</h3>
+          <p>
+            Yuya’s friend who backs him up in duels and arguments. Known for her
+            strong sense of justice (and her paper fan).
+          </p>
+        </div>
 
-      <figure class="gallery-item">
-        <!-- Replace with a Yuzu / Zuzu screenshot -->
-        <img src="https://via.placeholder.com/350x250" alt="Yuzu/Zuzu style portrait">
-        <figcaption>
-          <strong>Yuzu / Zuzu</strong><br>
-          Yuya’s childhood friend with a solid right hook and a strong sense of justice.
-          Constantly dragged into dimensional nonsense but refuses to back down.
-        </figcaption>
-      </figure>
+        <div class="gal-item">
+          <img src="https://via.placeholder.com/350x250" alt="Antagonist portrait style">
+          <h3>Major Antagonist</h3>
+          <p>
+            ARC-V has several “villain” figures, from CEOs to invaders from
+            other dimensions. Many of them have their own reasons.
+          </p>
+        </div>
 
-      <figure class="gallery-item">
-        <!-- Replace with an “antagonist” screenshot (Reiji, Academia, etc.) -->
-        <img src="https://via.placeholder.com/350x250" alt="ARC-V antagonist inspired portrait">
-        <figcaption>
-          <strong>Key Antagonist</strong><br>
-          Whether it’s a certain CEO-level genius or Academia’s forces, the “villains”
-          in ARC-V usually have a plan, a backstory, and a lot of dramatic lighting.
-        </figcaption>
-      </figure>
+        <div class="gal-item">
+          <img src="https://via.placeholder.com/350x250" alt="You Show Duel School">
+          <h3>You Show Duel School</h3>
+          <p>
+            A small, “weak-looking” duel school that actually encourages fun and
+            creativity. It feels like home for the main cast.
+          </p>
+        </div>
 
-      <figure class="gallery-item">
-        <!-- Replace with You Show or city shot -->
-        <img src="https://via.placeholder.com/350x250" alt="You Show Duel School inspired location">
-        <figcaption>
-          <strong>You Show Duel School</strong><br>
-          A small, chaotic duel school that feels like home. It represents the kind of
-          dueling that values creativity and fun over rigid rules or rankings.
-        </figcaption>
-      </figure>
+        <div class="gal-item">
+          <img src="https://via.placeholder.com/350x250" alt="Emotional ARC-V scene">
+          <h3>Emotional Moment</h3>
+          <p>
+            The show likes to drop big emotional scenes in the middle of duels.
+            Tears, shouting, and card effects all at once.
+          </p>
+        </div>
 
-      <figure class="gallery-item">
-        <!-- Replace with emotional scene (crying, goodbye, etc.) -->
-        <img src="https://via.placeholder.com/350x250" alt="Emotional ARC-V scene inspired image">
-        <figcaption>
-          <strong>Emotional Moment</strong><br>
-          ARC-V doesn’t hesitate to drop dramatic speeches, breakdowns, and heartfelt
-          goodbyes in the middle of card games about hologram dragons.
-        </figcaption>
-      </figure>
+        <div class="gal-item">
+          <img src="https://via.placeholder.com/350x250" alt="Action Duel scene">
+          <h3>Action Duel</h3>
+          <p>
+            Action Duels mix running, jumping, and grabbing Action Cards from
+            the field with normal card game strategy.
+          </p>
+        </div>
+      </div>
 
-      <figure class="gallery-item">
-        <!-- Replace with big Action Duel shot -->
-        <img src="https://via.placeholder.com/350x250" alt="Action Duel highlight inspired image">
-        <figcaption>
-          <strong>Action Duel Highlight</strong><br>
-          Action Duels let characters grab Action Cards from the field mid-battle,
-          turning duels into parkour plus magic plus screaming. Peak “extra.”
-        </figcaption>
-      </figure>
-    </section>
+      <div class="gal-notes">
+        <h2>Visual Details to Watch</h2>
+        <ul>
+          <li>How each dimension uses color to show its mood.</li>
+          <li>How Yuya’s dragons change as the story goes on.</li>
+          <li>Posters and signs in the background of city scenes.</li>
+          <li>Differences between “fun” duels and war-like duels.</li>
+        </ul>
+        <div class="gal-highlight">
+          <p>
+            Even if you ignore the card text, you can follow a lot of the story
+            just by watching colors, expressions, and posing.
+          </p>
+        </div>
+      </div>
+    </div>
 
-    <section class="gallery-notes">
-      <h3>Visual Details Worth Watching For</h3>
-      <ul>
-        <li>How different dimensions use color to signal their atmosphere and mood.</li>
-        <li>The way Yuya’s dragons evolve alongside his emotional state.</li>
-        <li>Background gags and posters in You Show Duel School and around the city.</li>
-        <li>Contrast between “fun” Entertainment Duels and the harsher war-like duels.</li>
-      </ul>
-
-      <p class="gallery-highlight">
-        ARC-V’s visuals are a big part of its storytelling. Even if you ignore the card
-        text, you can track character growth and tension just by watching how the scenes
-        are framed and colored.
-      </p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <p>&copy; 2025 Yu-Gi-Oh! ARC-V Visual Gallery. Student fan gallery page.</p>
-  </footer>
-
-</body>
+    <div class="footer">
+      <p>© 2025 Yu-Gi-Oh! ARC-V Gallery. Student project.</p>
+    </div>
+  </body>
 </html>
