--- a/index.html
+++ b/index.html
@@ -1,115 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Yu-Gi-Oh! ARC-V Fan Site - Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body id="home-page">
+  <head>
+    <meta charset="UTF-8">
+    <title>Yu-Gi-Oh! ARC-V - Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body class="home">
+    <div class="nav">
+      <div class="nav-inner">
+        <div class="nav-title">Yu-Gi-Oh! ARC-V</div>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="episodes.html">Episodes</a>
+          <a href="gallery.html">Gallery</a>
+        </div>
+      </div>
+    </div>
 
-  <header class="site-header">
-    <h1 class="site-title">YU-GI-OH! ARC-V FAN HUB</h1>
-    <nav class="site-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="content home-grid">
-    <section class="hero">
-      <!-- Replace this with an ARC-V hero image or banner later -->
-      <img src="https://via.placeholder.com/900x400" alt="Hero banner image inspired by Yu-Gi-Oh! ARC-V">
-      <div class="hero-text">
-        <h2>Step into the World of Yu-Gi-Oh! ARC-V</h2>
+    <div class="home-grid">
+      <div class="home-hero">
+        <!-- Replace this with an ARC-V hero image later -->
+        <img src="https://via.placeholder.com/900x350" alt="Yu-Gi-Oh! ARC-V style hero image">
         <p>
           <strong>Yu-Gi-Oh! ARC-V</strong> follows Yuya Sakaki, an Entertainment Duelist
-          who wants to make people smile with his duels. Along the way, he learns about
-          Pendulum Summoning, interdimensional conflict, and the truth behind the four
-          separate dimensions linked by Duel Monsters.
+          who wants to make people smile with his duels. As the story goes on, he gets
+          pulled into a conflict that spans multiple dimensions.
         </p>
       </div>
-    </section>
 
-    <section class="home-intro">
-      <h3>What Is ARC-V About?</h3>
-      <p>
-        The story begins in the Standard Dimension, where Yuya studies at You Show Duel
-        School and dreams of becoming a great entertainer like his father. His life changes
-        when a high-stakes Duel gives him the chance to show off a new summoning method:
-        <strong>Pendulum Summoning</strong>.
-      </p>
-      <p>
-        As the series goes on, the cast is pulled into a conflict that spans the
-        <strong>Standard, Synchro, Xyz, and Fusion</strong> dimensions. Friends and rivals
-        from each world collide, and duels become a way to fight for freedom, identity,
-        and what “smiles” actually mean.
-      </p>
+      <div class="home-info">
+        <h2>About the Show</h2>
+        <p>
+          ARC-V starts in the Standard Dimension, where Yuya studies at You Show Duel
+          School. After showing off Pendulum Summoning, he becomes the center of a
+          much larger story.
+        </p>
+        <p>
+          Different dimensions focus on different summoning styles and different rules.
+          The characters have to figure out what “entertainment” means when duels
+          suddenly have real consequences.
+        </p>
+        <ul>
+          <li>Genre: Shōnen / Action / Fantasy</li>
+          <li>Main character: Yuya Sakaki</li>
+          <li>Key mechanic: Pendulum Summoning</li>
+          <li>Running time: 148 episodes</li>
+        </ul>
+      </div>
 
-      <ul class="tag-list">
-        <li>Genre: <span>Shōnen / Action / Fantasy</span></li>
-        <li>Focus: <span>Duel Monsters, Pendulum Summoning, Dimension Travel</span></li>
-        <li>Vibes: <span>Over-the-top duels, found family, emotional dragons</span></li>
-      </ul>
-    </section>
+      <div class="home-side">
+        <h2>Quick Facts</h2>
+        <ul>
+          <li>Goal: Make people smile with duels</li>
+          <li>Dimensions: Standard, Synchro, Xyz, Fusion</li>
+          <li>Theme: Identity, performance, and choice</li>
+        </ul>
+        <!-- Replace this with a cast image later -->
+        <img src="https://via.placeholder.com/300x200" alt="Yu-Gi-Oh! ARC-V main cast style image">
+        <div class="home-highlight">
+          <p>
+            ARC-V is known for flashy duels, emotional dragons, and the idea that
+            a duel can be both a show and a serious fight at the same time.
+          </p>
+        </div>
+      </div>
 
-    <aside class="home-sidebar">
-      <h3>ARC-V Quick Facts</h3>
-      <table class="info-table">
-        <tr>
-          <th>Main Protagonist</th>
-          <td>Yuya Sakaki</td>
-        </tr>
-        <tr>
-          <th>Number of Episodes</th>
-          <td>148</td>
-        </tr>
-        <tr>
-          <th>Original Run</th>
-          <td>2014–2017</td>
-        </tr>
-        <tr>
-          <th>Signature Mechanic</th>
-          <td>Pendulum Summoning</td>
-        </tr>
-      </table>
+      <div class="home-extra">
+        <h2>Why Watch ARC-V?</h2>
+        <p>
+          If you like Yu-Gi-Oh! in general, ARC-V adds:
+        </p>
+        <ol>
+          <li>New duel mechanics and crazy Action Duels.</li>
+          <li>Multiple versions of “Yuya” from different worlds.</li>
+          <li>A plot that slowly reveals how all the dimensions connect.</li>
+        </ol>
+        <!-- Third image for this page -->
+        <img src="https://via.placeholder.com/500x250" alt="Action Duel style scene">
+      </div>
+    </div>
 
-      <!-- Replace with a Yuya / main cast screenshot later -->
-      <img src="https://via.placeholder.com/300x200" alt="Yu-Gi-Oh! ARC-V main cast style image" class="sidebar-image">
+    <div class="footer">
+      <p>© 2025 Yu-Gi-Oh! ARC-V Fan Site. Student project, not official.</p>
+    </div>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Yu-Gi-Oh! ARC-V - Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body class="home">
+    <div class="nav">
+      <div class="nav-inner">
+        <div class="nav-title">Yu-Gi-Oh! ARC-V</div>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="episodes.html">Episodes</a>
+          <a href="gallery.html">Gallery</a>
+        </div>
+      </div>
+    </div>
 
-      <p class="highlight-box">
-        ARC-V mixes classic Yu-Gi-Oh! duel hype with new mechanics and the idea that
-        dueling is a performance meant to bring joy, even when the stakes get absurdly high.
-      </p>
-    </aside>
+    <div class="home-grid">
+      <div class="home-hero">
+        <!-- Replace this with an ARC-V hero image later -->
+        <img src="https://via.placeholder.com/900x350" alt="Yu-Gi-Oh! ARC-V style hero image">
+        <p>
+          <strong>Yu-Gi-Oh! ARC-V</strong> follows Yuya Sakaki, an Entertainment Duelist
+          who wants to make people smile with his duels. As the story goes on, he gets
+          pulled into a conflict that spans multiple dimensions.
+        </p>
+      </div>
 
-    <section class="home-extra">
-      <h3>Why Watch ARC-V?</h3>
-      <p>
-        ARC-V is packed with creative duel setups, overdramatic speeches, and big emotional
-        swings involving dragons, friends, and morally questionable adults. If you like
-        card games that behave like full-on boss battles, this series is very much that.
-      </p>
+      <div class="home-info">
+        <h2>About the Show</h2>
+        <p>
+          ARC-V starts in the Standard Dimension, where Yuya studies at You Show Duel
+          School. After showing off Pendulum Summoning, he becomes the center of a
+          much larger story.
+        </p>
+        <p>
+          Different dimensions focus on different summoning styles and different rules.
+          The characters have to figure out what “entertainment” means when duels
+          suddenly have real consequences.
+        </p>
+        <ul>
+          <li>Genre: Shōnen / Action / Fantasy</li>
+          <li>Main character: Yuya Sakaki</li>
+          <li>Key mechanic: Pendulum Summoning</li>
+          <li>Running time: 148 episodes</li>
+        </ul>
+      </div>
 
-      <!-- Replace with an Action Duel / field screenshot later -->
-      <img src="https://via.placeholder.com/400x250" alt="Action Duel style scene inspired by Yu-Gi-Oh! ARC-V">
+      <div class="home-side">
+        <h2>Quick Facts</h2>
+        <ul>
+          <li>Goal: Make people smile with duels</li>
+          <li>Dimensions: Standard, Synchro, Xyz, Fusion</li>
+          <li>Theme: Identity, performance, and choice</li>
+        </ul>
+        <!-- Replace this with a cast image later -->
+        <img src="https://via.placeholder.com/300x200" alt="Yu-Gi-Oh! ARC-V main cast style image">
+        <div class="home-highlight">
+          <p>
+            ARC-V is known for flashy duels, emotional dragons, and the idea that
+            a duel can be both a show and a serious fight at the same time.
+          </p>
+        </div>
+      </div>
 
-      <form class="newsletter-form">
-        <h4>Fan Notes &amp; Updates</h4>
-        <label for="email">Email address (for pretend updates):</label>
-        <input id="email" type="email" name="email" placeholder="you@example.com">
-        <button type="submit">Save Info</button>
-      </form>
-    </section>
-  </main>
+      <div class="home-extra">
+        <h2>Why Watch ARC-V?</h2>
+        <p>
+          If you like Yu-Gi-Oh! in general, ARC-V adds:
+        </p>
+        <ol>
+          <li>New duel mechanics and crazy Action Duels.</li>
+          <li>Multiple versions of “Yuya” from different worlds.</li>
+          <li>A plot that slowly reveals how all the dimensions connect.</li>
+        </ol>
+        <!-- Third image for this page -->
+        <img src="https://via.placeholder.com/500x250" alt="Action Duel style scene">
+      </div>
+    </div>
 
-  <footer class="site-footer">
-    <p>&copy; 2025 Yu-Gi-Oh! ARC-V Fan Hub. This is a student project site, not an official page.</p>
-  </footer>
-
-</body>
+    <div class="footer">
+      <p>© 2025 Yu-Gi-Oh! ARC-V Fan Site. Student project, not official.</p>
+    </div>
+  </body>
 </html>
